fix flash of invisible text (FOIT)

--- a/themes/ssarcandy/source/css/_partial/fontawesome.less
+++ b/themes/ssarcandy/source/css/_partial/fontawesome.less
@@ -16,6 +16,7 @@
   url('@{fa-font-path}/fontawesome-webfont.ttf?v=@{fa-version}') format('truetype');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 .@{fa-css-prefix} {
