--- a/themes/ssarcandy/source/css/_partial/roboto.less
+++ b/themes/ssarcandy/source/css/_partial/roboto.less
@@ -5,13 +5,16 @@
         url("@{font-roboto}/Roboto-Thin.ttf") format("truetype");
 
     font-weight: 200;
+    font-display: swap;
 }
+
 @font-face {
     font-family: "Roboto";
     src: local('Roboto Light'), local('Roboto-Light'), url("@{font-roboto}/Roboto-Light.woff2") format("woff2"),
         url("@{font-roboto}/Roboto-Light.woff") format("woff"),
         url("@{font-roboto}/Roboto-Light.ttf") format("truetype");
     font-weight: 300;
+    font-display: swap;
 }
 
 @font-face {
@@ -20,6 +23,7 @@
         url("@{font-roboto}/Roboto-Regular.woff") format("woff"),
         url("@{font-roboto}/Roboto-Regular.ttf") format("truetype");
     font-weight: 400;
+    font-display: swap;
 }
 
 @font-face {
@@ -28,6 +32,7 @@
         url("@{font-roboto}/Roboto-Medium.woff") format("woff"),
         url("@{font-roboto}/Roboto-Medium.ttf") format("truetype");
     font-weight: 500;
+    font-display: swap;
 }
 
 @font-face {
@@ -36,4 +41,5 @@
         url("@{font-roboto}/Roboto-Bold.woff") format("woff"),
         url("@{font-roboto}/Roboto-Bold.ttf") format("truetype");
     font-weight: 700;
+    font-display: swap;
 }
